change project thumbnails

--- a/index.html
+++ b/index.html
@@ -642,11 +642,11 @@
 
 				<div class="row portfolio-container">
 					<div class="col-md-6 portfolio-item filter-app">
-						<div class="portfolio-wrap">
+						<div class="portfolio-wrap apollo">
 							<img
-								src="assets/img/portfolio/portfolio-1.jpg"
+								src="assets/img/portfolio/apollo.jpg"
 								class="img-fluid"
-								alt=""
+								alt="Apollo"
 							/>
 							<div class="portfolio-info p-4">
 								<h4>Apollo</h4>
@@ -670,11 +670,11 @@
 					</div>
 
 					<div class="col-md-6 portfolio-item filter-web">
-						<div class="portfolio-wrap">
+						<div class="portfolio-wrap ares">
 							<img
-								src="assets/img/portfolio/portfolio-2.jpg"
+								src="assets/img/portfolio/ares.jpg"
 								class="img-fluid"
-								alt=""
+								alt="Ares Workout"
 							/>
 							<div class="portfolio-info p-4">
 								<h4>Ares Workout</h4>
@@ -698,11 +698,11 @@
 					</div>
 
 					<div class="col-md-6 portfolio-item filter-app">
-						<div class="portfolio-wrap">
+						<div class="portfolio-wrap network">
 							<img
-								src="assets/img/portfolio/portfolio-3.jpg"
+								src="assets/img/portfolio/network.jpg"
 								class="img-fluid"
-								alt=""
+								alt="Network"
 							/>
 							<div class="portfolio-info p-4">
 								<h4>Network</h4>
@@ -720,11 +720,11 @@
 					</div>
 
 					<div class="col-md-6 portfolio-item filter-card">
-						<div class="portfolio-wrap">
+						<div class="portfolio-wrap auctions">
 							<img
-								src="assets/img/portfolio/portfolio-4.jpg"
+								src="assets/img/portfolio/auctions.jpg"
 								class="img-fluid"
-								alt=""
+								alt="Auctions"
 							/>
 							<div class="portfolio-info p-4">
 								<h4>Auctions</h4>
@@ -767,7 +767,7 @@
 							<i class="bx bx-share-alt"></i>
 							<h3>Social Profiles</h3>
 							<div class="social-links">
-								<a href="https://www.linkedin.com/in/brunosag/" class="linkedin"
+								<a href="https://www.linkedin.com/in/brunosag/" target="" class="linkedin"
 									><i class="bi bi-linkedin"></i
 								></a>
 								<a href="https://github.com/brunosag" class="github"
