make email an anchor tag

--- a/index.html
+++ b/index.html
@@ -767,10 +767,10 @@
 							<i class="bx bx-share-alt"></i>
 							<h3>Social Profiles</h3>
 							<div class="social-links">
-								<a href="https://www.linkedin.com/in/brunosag/" target="" class="linkedin"
+								<a href="https://www.linkedin.com/in/brunosag/" target="_blank" class="linkedin"
 									><i class="bi bi-linkedin"></i
 								></a>
-								<a href="https://github.com/brunosag" class="github"
+								<a href="https://github.com/brunosag" target="_blank" class="github"
 									><i class="bi bi-github"></i
 								></a>
 							</div>
@@ -781,7 +781,7 @@
 						<div class="info-box">
 							<i class="bx bx-envelope"></i>
 							<h3>Email Me</h3>
-							<p>brunosag@outlook.com.br</p>
+							<p><a href="mailto: brunosag@outlook.com.br">brunosag@outlook.com.br</a></p>
 						</div>
 					</div>
 					<div class="col-md-6 mt-4 d-flex align-items-stretch">
