--- a/index.html
+++ b/index.html
@@ -757,38 +757,46 @@
 					<div class="col-md-6 d-flex align-items-stretch">
 						<div class="info-box">
 							<i class="bx bx-map"></i>
-							<h3>Location</h3>
-							<p>Porto Alegre, RS, Brazil</p>
+							<div>
+                                <h3>Location</h3>
+                                <p>Porto Alegre, RS, Brazil</p>
+                            </div>
 						</div>
 					</div>
 
 					<div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
 						<div class="info-box">
 							<i class="bx bx-share-alt"></i>
-							<h3>Social Profiles</h3>
-							<div class="social-links">
-								<a href="https://www.linkedin.com/in/brunosag/" target="_blank" class="linkedin"
-									><i class="bi bi-linkedin"></i
-								></a>
-								<a href="https://github.com/brunosag" target="_blank" class="github"
-									><i class="bi bi-github"></i
-								></a>
-							</div>
+							<div>
+                                <h3>Social Profiles</h3>
+                                <div class="social-links">
+                                    <a href="https://www.linkedin.com/in/brunosag/" target="_blank" class="linkedin"
+                                        ><i class="bi bi-linkedin"></i
+                                    ></a>
+                                    <a href="https://github.com/brunosag" target="_blank" class="github"
+                                        ><i class="bi bi-github"></i
+                                    ></a>
+                                </div>
+                            </div>
 						</div>
 					</div>
 
 					<div class="col-md-6 mt-4 d-flex align-items-stretch">
 						<div class="info-box">
 							<i class="bx bx-envelope"></i>
-							<h3>Email Me</h3>
-							<p><a href="mailto: brunosag@outlook.com.br">brunosag@outlook.com.br</a></p>
+							<div>
+                                <h3>Email Me</h3>
+                                <p><a href="mailto: brunosag@outlook.com.br">brunosag@outlook.com.br</a></p>
+                            </div>
 						</div>
 					</div>
 					<div class="col-md-6 mt-4 d-flex align-items-stretch">
 						<div class="info-box">
 							<i class="bx bxl-whatsapp"></i>
-							<h3>Message Me</h3>
-							<p>+55 47 99277 0404</p>
+							<div>
+                                <h3>Message Me</h3>
+                                <p>+55 47 99277 0404</p>
+                            </div>
 						</div>
 					</div>
 				</div>
