--- a/index.html
+++ b/index.html
@@ -801,11 +801,11 @@
 					</div>
 				</div>
 
-				<!-- <form
-					action="forms/contact.php"
-					method="post"
-					role="form"
+				<form
+					method="POST"
 					class="php-email-form mt-4"
+                    name="contact"
+                    data-netlify="true"
 				>
 					<div class="row">
 						<div class="col-md-6 form-group">
@@ -848,13 +848,10 @@
 							required
 						></textarea>
 					</div>
-					<div class="my-3">
-						<div class="loading">Loading</div>
-						<div class="error-message"></div>
-						<div class="sent-message">Your message has been sent. Thank you!</div>
-					</div>
-					<div class="text-center"><button type="submit">Send Message</button></div>
-				</form> -->
+					<div class="text-center mt-3">
+                        <button type="submit">Send Message</button>
+                    </div>
+				</form>
 			</div>
 		</section>
 		<!-- End Contact Section -->
@@ -866,7 +863,6 @@
 		<script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
 		<script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 		<script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-		<script src="assets/vendor/php-email-form/validate.js"></script>
 
 		<!-- Template Main JS File -->
 		<script src="assets/js/main.js"></script>
